@@ -1,6 +1,7 @@
 name: Metricbeat
 cmd: metricbeat
 args: ["-E", "setup.ilm.enabled=false", "-E", "setup.template.enabled=false", "-E", "management.mode=x-pack-fleet", "-E", "management.enabled=true", "-E", "logging.level=debug"]
+artifact: beats/metricbeat
 post_install:
   - move_file:
       path: "modules.d/system.yml"
