@@ -75,3 +75,4 @@
 - Agent now runs the GRPC server and spawned application connect by to Agent {pull}18973[18973]
 - Rename input.type logs to logfile {pull}19360[19360]
 - Agent now installs/uninstalls Elastic Endpoint {pull}19248[19248]
+- Agent now downloads Elastic Endpoint {pull}19503[19503]
